--- a/demo/index.html
+++ b/demo/index.html
@@ -8,14 +8,18 @@
 </head>
 <body>
   <div class="container">
-    <ul class="gallery">
-      <li><img src="http://placehold.it/640x480" alt="1"></li>
-      <li><img src="http://placehold.it/640x480" alt="2"></li>
-      <li><img src="http://placehold.it/640x480" alt="3"></li>
-      <li><img src="http://placehold.it/640x480" alt="4"></li>
-      <li><img src="http://placehold.it/640x480" alt="5"></li>
-      <li><img src="http://placehold.it/640x480" alt="6"></li>
-    </ul>
+    <div class="gallery">
+      <ul class="gallery-inner">
+        <li><img src="img/1.gif" alt="1"></li>
+        <li><img src="img/2.gif" alt="2"></li>
+        <li><img src="img/3.gif" alt="3"></li>
+        <li><img src="img/4.gif" alt="4"></li>
+        <li><img src="img/5.gif" alt="5"></li>
+        <li><img src="img/6.gif" alt="6"></li>
+      </ul>
+      <button class="gallery-control gallery-prev">Prev</button>
+      <button class="gallery-control gallery-next">Next</button>
+    </div>
   </div>
   <script src="js/main.js"></script>
 </body>
