--- a/demo/index.html
+++ b/demo/index.html
@@ -7,19 +7,20 @@
   <link rel="stylesheet" href="css/gallery.css">
 </head>
 <body>
-  <div class="container">
-    <div class="gallery">
-      <ul class="gallery-inner">
-        <li><img src="img/1.gif" alt="1"></li>
-        <li><img src="img/2.gif" alt="2"></li>
-        <li><img src="img/3.gif" alt="3"></li>
-        <li><img src="img/4.gif" alt="4"></li>
-        <li><img src="img/5.gif" alt="5"></li>
-        <li><img src="img/6.gif" alt="6"></li>
-      </ul>
-      <button class="gallery-control gallery-prev">Prev</button>
-      <button class="gallery-control gallery-next">Next</button>
-    </div>
+  <div class="gallery">
+    <ul class="gallery-inner">
+      <li><img src="img/1.gif" alt="1"></li>
+      <li><img src="img/2.gif" alt="2"></li>
+      <li><img src="img/3.gif" alt="3"></li>
+      <li><img src="img/4.gif" alt="4"></li>
+      <li><img src="img/5.gif" alt="5"></li>
+      <li><img src="img/6.gif" alt="6"></li>
+      <li><img src="img/7.gif" alt="7"></li>
+      <li><img src="img/8.gif" alt="8"></li>
+      <li><img src="img/9.gif" alt="9"></li>
+    </ul>
+    <button class="gallery-control gallery-prev"><span>Prev</span></button>
+    <button class="gallery-control gallery-next"><span>Next</span></button>
   </div>
   <script src="js/main.js"></script>
 </body>
